--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LabP2Examen1_LuisMontalvan
-main.class=labp2examen1_luismontalvan.LabP2Examen1_LuisMontalvan
+main.class=labp2examen1_luismontalvan.MainExamen
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
